Major cleanup of JavaService